# daikin-altherma-rs

./: Cargo.toml  README.md
examples/: get_values.rs  temperature.rs
mytest/: Cargo.toml
mytest/src/: main.rs
src/: errors.rs  lib.rs  params.rs  traits.rs
