workspace = { members = ["mytest"] }
[package]
name = "daikin_altherma"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
thiserror = "1.0.57"
tungstenite = "0.21.0"
url = "2.5.0"

[dependencies.uuid]
features = ["v4"]
